# DNAnano

./: .gitignore  .gitignore~  README.md  branchAddPush.csh  process_json.py
200122_TC_cadnano_seqeunces_for_Joel/: .~lock.Meeting200121.pptx#  130210_0739_culled_32mers.txt  130318_1512_culled_45mers.txt  190604_TC_SSpore_cinch1.json  190604_TC_pore_cinch1Broken.json  191128_TC_Lpore_cinch1.json  TC_seq.py  figs.odp  lone_190604_TC_SSpore_cinch1.json  lone_190604_TC_pore_cinch1.json  lone_191128_TC_Lpore_cinch1.json  only_lone_190604_TC_pore_cinch.json  play.json  test.json  test1.json
200122_TC_cadnano_seqeunces_for_Joel/sequences ordered/: 190819_TC_connector_design_sequences_order.xlsx  191203_TC_multiple_connecters_and_Lpore_sequences_to_order.xlsx
200122_TC_cadnano_seqeunces_for_Joel/sequencesOrdered/: .~lock.190604_TC_sequences_order.xlsx#  190604_TC_sequences_order.xlsx  200714_TC_pore_sequences_for_oxdna.xlsx  201207_TC_pore_sequences_for_oxdna.xlsx
cogli1/: .cproject  .project  CMakeLists.txt  Camera.cpp  Camera.h  Cogli1.cpp  Cogli1.h  Lighting.cpp  Lighting.h  README.md  cl_arguments.h  main.cpp
cogli1/Actions/: ActionBuilder.cpp  ActionBuilder.h  Rotation.h  Translation.h
cogli1/Drawables/: Arrow.cpp  DHS.cpp  DHS.h  DNA.cpp  DNA.h  Group.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
cogli1/Drawers/: Drawer.h  OGLDrawer.cpp  OGLDrawer.h  PovDrawer.cpp  PovDrawer.h
cogli1/OGL/: OGLManager.cpp  OGLManager.h
cogli1/OGL/Shapes/: OGLArrow.cpp  OGLArrow.h  OGLCone.cpp  OGLCone.h  OGLCylinder.cpp  OGLCylinder.h  OGLEllipsoid.cpp  OGLEllipsoid.h  OGLSphere.cpp  OGLSphere.h
cogli1/Parsers/: DNAParser.cpp  DNAParser.h  IoxDNAParser.h  MGLParser.cpp  MGLParser.h  Parser.h  PatchyParser.cpp  RBCParser.h
cogli1/Utils/: MathHelper.cpp  MathHelper.h  StringHelper.cpp  StringHelper.h
cogli1/oxDNA/: BackendWrapper.cpp  BackendWrapper.h  Cogli1Manager.cpp  Cogli1Manager.h
cogli1/povray/: DNARibbon.h  PovManager.cpp
oxDNA/: .cproject  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  Makefile~  addpath.csh  addpath.csh~  cmake_install.cmake  input_relax  makevids.txt  oxDNA  virt2nuc
oxDNA/EXAMPLES/HAIRPIN/: input_seq_dep  run.sh
oxDNA/EXAMPLES/NEW_RELAX_PROCEDURE/: input_min  input_relax  test_relax
oxDNA/EXAMPLES/PSEUDOKNOT/: inputMC
oxDNA/EXAMPLES/RELAX_INITIAL_CONFIGURATION/: relaxed.conf  relaxed_weak.conf  run.sh
oxDNA/EXAMPLES/TRAPS/: external.conf  external.conf~  inputMD  inputMD~  ssdna100.top  trajectory.dat_0_time_10000.cpy  trajectory.dat_0_time_10000.pov  trajectory.dat_100_time_1010000.pov  trajectory.dat_101_time_1020000.pov  trajectory.dat_102_time_1030000.pov  trajectory.dat_103_time_1040000.pov  trajectory.dat_104_time_1050000.pov  trajectory.dat_105_time_1060000.pov  trajectory.dat_106_time_1070000.pov  trajectory.dat_107_time_1080000.pov  trajectory.dat_108_time_1090000.pov  trajectory.dat_109_time_1100000.pov  trajectory.dat_10_time_110000.pov  trajectory.dat_110_time_1110000.pov  trajectory.dat_111_time_1120000.pov  trajectory.dat_112_time_1130000.pov  trajectory.dat_113_time_1140000.pov  trajectory.dat_114_time_1150000.pov  trajectory.dat_115_time_1160000.pov  trajectory.dat_116_time_1170000.pov  trajectory.dat_117_time_1180000.pov  trajectory.dat_118_time_1190000.pov  (+222 more)
oxDNA/MyScripts/: deleteStrand.py  generateSeqFile.py  generateSeqFile.py~  getBonds.py~  makeVids.sh  makeVids.sh~  movetop.py  new_relax.sh  new_relax.sh~  printsqs.py  relax_origami.sh  rot.py  rowSqsSameNt.py  rowSqsSameNt.py~  savepos.py  savepos.py~  shift.py  topanal.py
oxDNA/UTILS/: getBonds.py  getBonds.py~  output_bonds.py~  printsqs.py  printsqs.py~
oxDNA/biomod-pore/: botview.cpy  posData.txt  prova.conf  prova.top  r.sh  view.cpy  virt2nuc
oxDNA/contrib/: Makefile  cmake_install.cmake
oxDNA/myTests/: chimera.com  forming dsdna.json  inputMC  input_relax  prova.conf  prova.top  trajectory.dat_0_time_100000.cpy  trajectory.dat_0_time_100000.pov  trajectory.dat_10_time_1100000.pov  trajectory.dat_11_time_1200000.pov  trajectory.dat_12_time_1300000.pov  trajectory.dat_13_time_1400000.pov  trajectory.dat_14_time_1500000.pov  trajectory.dat_15_time_1600000.pov  trajectory.dat_16_time_1700000.pov  trajectory.dat_17_time_1800000.pov  trajectory.dat_18_time_1900000.pov  trajectory.dat_19_time_2000000.pov  trajectory.dat_1_time_200000.pov  trajectory.dat_20_time_2100000.pov  trajectory.dat_2_time_300000.pov  trajectory.dat_3_time_400000.pov  trajectory.dat_4_time_500000.pov  trajectory.dat_5_time_600000.pov  trajectory.dat_6_time_700000.pov  trajectory.dat_7_time_800000.pov  trajectory.dat_8_time_900000.pov  trajectory.dat_9_time_1000000.pov  virt2nuc
oxDNA/sequences/: handles.json
oxDNA/src/: CMakeLists.txt~  Makefile  cmake_install.cmake
results/200709_cinch_conn/: 20200709_oxDNAlien_tether_lengths_and_seqs.pptx.pptx
results/200905_cinch/: Cinches.docx  results.xlsx
results/201217_cinch_conn2/: 20201218_oxDNAlien_cinch_connect_2.pptx
results/210110_methods/: fig1.xcf
(+4786 files in other folders)
